tooling/nargo_cli/tests/snapshots/execution_success/regression_8726/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: i64) -> pub i64 {
    let y: i64 = x / x;
    x / y
}
