tooling/nargo_cli/tests/snapshots/execution_success/regression_8726/execute__tests__force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 64
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "signed",
        "width": 64
      },
      "visibility": "public"
    },
    "error_types": {
      "13301295855638053177": {
        "error_kind": "string",
        "string": "Attempt to divide with overflow"
      },
      "15764276373176857197": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _1",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : [_1]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ]], outputs: [_1]",
    "unconstrained func 0",
    "[Const { destination: Direct(2), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(1), bit_size: Integer(U32), value: 32838 }, Const { destination: Direct(0), bit_size: Integer(U32), value: 3 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 1 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(32836), size_address: Relative(2), offset_address: Relative(3) }, Cast { destination: Direct(32836), source: Direct(32836), bit_size: Integer(U64) }, Mov { destination: Relative(1), source: Direct(32836) }, Call { location: 14 }, Call { location: 15 }, Mov { destination: Direct(32837), source: Relative(1) }, Const { destination: Relative(2), bit_size: Integer(U32), value: 32837 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 1 }, Stop { return_data: HeapVector { pointer: Relative(2), size: Relative(3) } }, Return, Call { location: 66 }, Const { destination: Relative(8), bit_size: Integer(U64), value: 9223372036854775807 }, BinaryIntOp { destination: Relative(3), op: LessThan, bit_size: U64, lhs: Relative(8), rhs: Relative(1) }, Const { destination: Relative(9), bit_size: Integer(U64), value: 0 }, BinaryIntOp { destination: Relative(10), op: Sub, bit_size: U64, lhs: Relative(9), rhs: Relative(1) }, JumpIf { condition: Relative(3), location: 22 }, Jump { location: 24 }, Mov { destination: Relative(4), source: Relative(10) }, Jump { location: 25 }, Mov { destination: Relative(4), source: Relative(1) }, Const { destination: Relative(8), bit_size: Integer(U64), value: 9223372036854775807 }, BinaryIntOp { destination: Relative(5), op: LessThan, bit_size: U64, lhs: Relative(8), rhs: Relative(1) }, Const { destination: Relative(9), bit_size: Integer(U64), value: 0 }, BinaryIntOp { destination: Relative(10), op: Sub, bit_size: U64, lhs: Relative(9), rhs: Relative(1) }, JumpIf { condition: Relative(5), location: 31 }, Jump { location: 33 }, Mov { destination: Relative(6), source: Relative(10) }, Jump { location: 34 }, Mov { destination: Relative(6), source: Relative(1) }, BinaryIntOp { destination: Relative(2), op: Div, bit_size: U64, lhs: Relative(4), rhs: Relative(6) }, BinaryIntOp { destination: Relative(7), op: Xor, bit_size: U1, lhs: Relative(3), rhs: Relative(5) }, JumpIf { condition: Relative(7), location: 38 }, Jump { location: 40 }, Const { destination: Relative(8), bit_size: Integer(U64), value: 0 }, BinaryIntOp { destination: Relative(2), op: Sub, bit_size: U64, lhs: Relative(8), rhs: Relative(2) }, Const { destination: Relative(9), bit_size: Integer(U64), value: 9223372036854775807 }, BinaryIntOp { destination: Relative(4), op: LessThan, bit_size: U64, lhs: Relative(9), rhs: Relative(1) }, Const { destination: Relative(10), bit_size: Integer(U64), value: 0 }, BinaryIntOp { destination: Relative(11), op: Sub, bit_size: U64, lhs: Relative(10), rhs: Relative(1) }, JumpIf { condition: Relative(4), location: 46 }, Jump { location: 48 }, Mov { destination: Relative(5), source: Relative(11) }, Jump { location: 49 }, Mov { destination: Relative(5), source: Relative(1) }, Const { destination: Relative(9), bit_size: Integer(U64), value: 9223372036854775807 }, BinaryIntOp { destination: Relative(6), op: LessThan, bit_size: U64, lhs: Relative(9), rhs: Relative(2) }, Const { destination: Relative(10), bit_size: Integer(U64), value: 0 }, BinaryIntOp { destination: Relative(11), op: Sub, bit_size: U64, lhs: Relative(10), rhs: Relative(2) }, JumpIf { condition: Relative(6), location: 55 }, Jump { location: 57 }, Mov { destination: Relative(7), source: Relative(11) }, Jump { location: 58 }, Mov { destination: Relative(7), source: Relative(2) }, BinaryIntOp { destination: Relative(3), op: Div, bit_size: U64, lhs: Relative(5), rhs: Relative(7) }, BinaryIntOp { destination: Relative(8), op: Xor, bit_size: U1, lhs: Relative(4), rhs: Relative(6) }, JumpIf { condition: Relative(8), location: 62 }, Jump { location: 64 }, Const { destination: Relative(9), bit_size: Integer(U64), value: 0 }, BinaryIntOp { destination: Relative(3), op: Sub, bit_size: U64, lhs: Relative(9), rhs: Relative(3) }, Mov { destination: Relative(1), source: Relative(3) }, Return, Const { destination: Direct(32772), bit_size: Integer(U32), value: 30720 }, BinaryIntOp { destination: Direct(32771), op: LessThan, bit_size: U32, lhs: Direct(0), rhs: Direct(32772) }, JumpIf { condition: Direct(32771), location: 71 }, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 15764276373176857197 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
