tooling/nargo_cli/tests/snapshots/execution_success/regression_8726/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: i64):
    (no terminator instruction)
}
[regression_8726] Circuit output: -9223372036854775808
